--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=WebServices50925
-spring.profiles.active=Pro
+
+server.port=9090
+#spring.profiles.active=Pro
+
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:kirandb
+#spring.datasource.url=jdbc:h2:file:C:/Users/kaleem/Desktop/ANSARI/ansaridb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
