--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
      runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
+     	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+     	
+     	 implementation 'org.springframework.boot:spring-boot-starter-test'
+     
 }
 
 tasks.named('test') {
